--- a/requirements.txt
+++ b/requirements.txt
@@ -72,7 +72,6 @@ Pygments==2.17.2
 python-dateutil==2.8.2
 python-json-logger==2.0.7
 pytz==2025.1
-pywin32==306
 pywinpty==2.0.12
 PyYAML==6.0.1
 pyzmq==25.1.1
@@ -106,3 +105,5 @@ webencodings==0.5.1
 websocket-client==1.6.4
 Werkzeug==3.1.3
 widgetsnbextension==4.0.9
+numpy>=1.23.0
+
