--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-pip>=23.0
+fpip>=23.0
 setuptools>=68.0
 wheel
 setuptools>=58.0.4
@@ -62,7 +62,7 @@ nbformat==5.9.2
 nest-asyncio==1.5.8
 notebook==7.0.6
 notebook_shim==0.2.3
-numpy==2.0.2 
+numpy 
 overrides==7.4.0
 packaging==23.2
 pandas==2.2.3
@@ -111,5 +111,5 @@ webencodings==0.5.1
 websocket-client==1.6.4
 Werkzeug==3.1.3
 widgetsnbextension==4.0.9
-numpy>=1.23.0
+numpy
 
